[gd_scene load_steps=2 format=3 uid="uid://dslkpmu28jidj"]

[ext_resource type="Script" uid="uid://4fqgahekf1l8" path="res://demo/Main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Root" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ChatLog" type="RichTextLabel" parent="Root"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="LiveOutput" type="RichTextLabel" parent="Root"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
scroll_following = true

[node name="InputRow" type="HBoxContainer" parent="Root"]
layout_mode = 2
size_flags_vertical = 0

[node name="Input" type="LineEdit" parent="Root/InputRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type and press Enterâ€¦"

[node name="Send" type="Button" parent="Root/InputRow"]
layout_mode = 2
text = "Send"
